# nano-vllm-metal

./: .cspell.json  .gitignore  NOTICE  README.md  pyproject.toml
benchmarks/: overall_benchmark.py  prefix_cache_demo.py  profile_decode.py  serving_benchmark.py  spec_decode_benchmark.py  spec_decode_demo.py
benchmarks/kernels/: test_attention.py  test_quantized_matmul.py  utils.py
examples/: basic.py
src/nano_vllm_metal/: __init__.py  config.py  llm.py  loader.py  sampling_params.py
src/nano_vllm_metal/cache/: kv_cache.py  paged.py
src/nano_vllm_metal/engine/: generate.py  scheduler.py
src/nano_vllm_metal/layers/: activation.py  attention.py  embed_head.py  layernorm.py  linear.py  moe.py  rotary_embedding.py  sampler.py
src/nano_vllm_metal/metal/: CMakeLists.txt  bindings.cpp  build.py
src/nano_vllm_metal/metal/src/: flash_attention.cpp  kernels.h  paged_attention.cpp  paged_attention.metal  quantized_matmul.cpp  quantized_matmul.metal  utils.cpp
src/nano_vllm_metal/models/: __init__.py  qwen3.py  qwen3_dense.py
tests/: test_attention.py  test_batching.py  test_flash_attention.py  test_moe.py  test_paged_attention.py  test_paged_cache.py  test_paged_kv_int8.py  test_prefix_cache_eviction.py  test_quantized_matmul.py  test_qwen3_model.py  test_rope.py  test_speculative_generate.py
